# b1map-sim

./: CMakeLists.txt  LICENSE  README.md
docs/: LICENSE  _config.yml  index.md
docs/_includes/: head_custom.html
docs/assets/examples/: afi.toml  bss.toml  da.toml  homogeneous-phantom-15t-prop.h5  homogeneous-phantom-15t.h5  phantom.toml
docs/docs/: examples.md  settings.md  trx.toml
include/b1map/: b1mapping.h  body.h  image.h  image.tcc  sequences.h  util.h  version.h.in
include/b1map/io/: io_hdf5.h  io_toml.h  io_util.h
src/: CMakeLists.txt  b1mapping.cc  body.cc  image.cc  main.cc  main.h  sequences.cc  util.cc  version.cc
src/io/: io_hdf5.cc  io_toml.cc  io_util.cc
